--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
 }
 
+:root {
+}
+
 body {
   background: radial-gradient(
     circle,
@@ -15,10 +18,56 @@ body {
   background-size: cover;
 }
 
+header {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 30px;
+  font-family: "Playfair Display", serif;
+  width: 100%;
+  height: 100svh;
+}
+
+header h1 {
+  margin-top: 100px;
+  margin-bottom: 0;
+  padding: 50px;
+  font-size: 55px;
+  text-align: center;
+}
+
+header h2 {
+  margin-top: 0;
+  text-align: center;
+  color: #d26059;
+}
+
+header p {
+  font-size: 16px;
+  text-align: justify;
+  margin: 10px;
+  padding: 30px;
+}
+
+section,
+footer {
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 20px;
+  margin: 20px auto;
+  border-radius: 30px;
+  font-family: "Playfair Display", serif;
+}
+
+section {
+  width: 100%;
+  height: 100svh;
+}
+
+footer {
+}
+
 .navbar {
   background-color: rgba(255, 255, 255, 0.3);
   display: flex;
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: "Playfair Display", serif;
   font-size: 16px;
   align-items: center;
   justify-content: space-between;
@@ -26,4 +75,21 @@ body {
   margin: 30px 50px;
   border-radius: 30px;
   position: fixed;
+  backdrop-filter: blur(4px);
+}
+
+.nav-item:hover {
+  border-radius: 30px;
+  background-color: transparent;
+}
+
+.spacing {
+  margin: 80px;
+}
+
+.firstcol-hero {
+  background-image: url("images/long-horizontal.png");
+  background-position: 25px 25px;
+  background-repeat: no-repeat;
+  background-size: 100px;
 }
