--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     rgba(255, 255, 255, 1) 100%
   );
   background-size: cover;
+  overflow-x: hidden;
 }
 
 header {
@@ -28,14 +29,14 @@ header {
 
 header h1 {
   margin-top: 100px;
-  margin-bottom: 0;
-  padding: 50px;
+  margin-bottom: 50px;
+  padding: 0px;
   font-size: 55px;
   text-align: center;
 }
 
 header h2 {
-  margin-top: 0;
+  margin-top: 30px;
   text-align: center;
   color: #d26059;
 }
