--- a/style.css
+++ b/style.css
@@ -79,13 +79,20 @@ footer {
   backdrop-filter: blur(4px);
 }
 
+.nav-item {
+  text-align: center;
+}
 .nav-item:hover {
   border-radius: 30px;
-  background-color: transparent;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .spacing {
   margin: 80px;
+}
+
+.hero-row {
+  grid-gap: 8px;
 }
 
 .firstcol-hero {
