--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ footer {
 .nav-item:hover {
   border-radius: 30px;
   background-color: rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(4px);
 }
 
 .spacing {
