--- a/style.css
+++ b/style.css
@@ -11,11 +11,10 @@ body {
   background: radial-gradient(
     circle,
     rgba(203, 76, 70, 1) 0%,
-    rgba(227, 109, 75, 1) 23%,
-    rgba(225, 182, 197, 1) 68%,
+    rgba(227, 109, 75, 1) 50%,
     rgba(255, 255, 255, 1) 100%
   );
-  background-size: cover;
+  background-size: auto;
   overflow-x: hidden;
 }
 
@@ -25,26 +24,33 @@ header {
   font-family: "Playfair Display", serif;
   width: 100%;
   height: 100svh;
+  margin: 0 auto;
+  padding: 0;
+}
+
+header .about-me {
+  margin: 0;
+  padding: 0;
 }
 
 header h1 {
-  margin-top: 100px;
   margin-bottom: 50px;
-  padding: 0px;
+  padding: 50px;
   font-size: 55px;
   text-align: center;
 }
 
 header h2 {
   margin-top: 30px;
+  padding: 10px;
   text-align: center;
-  color: #d26059;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 header p {
   font-size: 16px;
   text-align: justify;
-  margin: 10px;
+
   padding: 30px;
 }
 
@@ -66,25 +72,26 @@ footer {
 }
 
 .navbar {
-  background-color: rgba(255, 255, 255, 0.3);
-  display: flex;
+  background-color: rgba(255, 255, 255, 0.4);
+
   font-family: "Playfair Display", serif;
   font-size: 16px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   padding: 20px;
   margin: 30px 50px;
   border-radius: 30px;
   position: fixed;
-  backdrop-filter: blur(4px);
+  backdrop-filter: blur(5px);
 }
 
 .nav-item {
-  text-align: center;
+  justify-content: flex-end;
 }
+
 .nav-item:hover {
   border-radius: 30px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(4px);
 }
 
@@ -92,13 +99,22 @@ footer {
   margin: 80px;
 }
 
+.aboutme-section h1 {
+  text-align: center;
+  color: rgba(255, 255, 255, 0.7);
+}
+
 .hero-row {
-  grid-gap: 8px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: none;
+  padding: 10px;
+  margin: 10px;
 }
 
 .firstcol-hero {
   background-image: url("images/long-horizontal.png");
-  background-position: 25px 25px;
+  background-position: 0px -1px;
   background-repeat: no-repeat;
   background-size: 100px;
 }
