--- a/style.css
+++ b/style.css
@@ -5,37 +5,33 @@
 }
 
 :root {
+  --light-color: #ffffff;
+  --main-font-family: "Playfair Display", serif;
 }
 
 body {
-  background: radial-gradient(
-    circle,
-    rgba(203, 76, 70, 1) 0%,
-    rgba(227, 109, 75, 1) 50%,
-    rgba(255, 255, 255, 1) 100%
-  );
-  background-size: auto;
-  overflow-x: hidden;
+  font-family: var(--main-font-family);
+  background: var(--light-color);
 }
 
 header {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-image: url(images/Untitled_Artwork-2.png);
+  background-size: cover;
   border-radius: 30px;
-  font-family: "Playfair Display", serif;
   width: 100%;
-  height: 100svh;
+  max-height: 100svh;
   margin: 0 auto;
   padding: 0;
 }
 
-header .about-me {
-  margin: 0;
-  padding: 0;
+header .hero {
+  margin: 100px auto;
+  width: 100%;
 }
 
 header h1 {
-  margin-bottom: 50px;
-  padding: 50px;
+  margin-top: 5px;
+  padding: 20px;
   font-size: 55px;
   text-align: center;
 }
@@ -44,23 +40,14 @@ header h2 {
   margin-top: 30px;
   padding: 10px;
   text-align: center;
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(33, 33, 33, 0.7);
 }
 
 header p {
   font-size: 16px;
   text-align: justify;
-
-  padding: 30px;
-}
-
-section,
-footer {
-  background-color: rgba(255, 255, 255, 0.1);
-  padding: 20px;
-  margin: 20px auto;
-  border-radius: 30px;
-  font-family: "Playfair Display", serif;
+  padding: 10px;
+  margin: 0 auto;
 }
 
 section {
@@ -68,12 +55,8 @@ section {
   height: 100svh;
 }
 
-footer {
-}
-
 .navbar {
   background-color: rgba(255, 255, 255, 0.4);
-
   font-family: "Playfair Display", serif;
   font-size: 16px;
   align-items: center;
@@ -114,7 +97,10 @@ footer {
 
 .firstcol-hero {
   background-image: url("images/long-horizontal.png");
-  background-position: 0px -1px;
+  background-position: 0px 10px;
   background-repeat: no-repeat;
   background-size: 100px;
+}
+
+@media screen and (max-width: 900px) {
 }
