--- a/style.css
+++ b/style.css
@@ -77,10 +77,9 @@ nav {
   border: solid 1px rgba(33, 33, 33, 0.1);
   font-size: 15px;
   align-items: center;
-  justify-content: flex-end;
-  padding: 20px;
-  margin: 30px 50px;
-  border-radius: 30px;
+  justify-content: space-evenly;
+  margin: 0px auto;
+  border-radius: 20px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
@@ -90,10 +89,6 @@ nav {
   height: 1.8em;
 }
 
-.navbar-nav {
-  max-width: max-content;
-  margin: 5px;
-}
 .nav-item {
   text-align: end;
   padding-right: 5px;
