--- a/style.css
+++ b/style.css
@@ -16,14 +16,15 @@ body {
 
 header {
   width: 100%;
-  height: 100vh;
   margin: 0 auto;
   padding: 0;
 }
 
 header .hero {
   margin: 67px auto;
+  padding: 15px 0px;
   width: 100%;
+  height: 100dvh;
   background-image: url(images/Untitled_Artwork-2.png);
   background-size: cover;
   border-radius: 15px;
@@ -32,7 +33,7 @@ header .hero {
 
 header h1 {
   margin-top: 5px;
-  padding: 20px;
+  padding: 25px;
   font-size: 55px;
   text-align: center;
 }
@@ -45,25 +46,25 @@ header h2 {
 }
 
 header p {
-  font-size: 16px;
+  font-size: 25px;
   text-align: justify;
-  padding: 10px;
-  margin: 0 auto;
+  padding: 15px;
+  margin: 15px auto;
 }
 
 .hero-row {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: none;
-  padding: 10px;
-  margin: 10px;
+  grid-template-columns: 1fr;
+  grid-gap: 5px;
+  padding: 40px;
+  margin: 0px 40px;
 }
 
 .firstcol-hero {
   background-image: url("images/long-horizontal.png");
   background-position: 0px 5px;
   background-repeat: no-repeat;
-  background-size: 100px;
+  background-size: 170px;
 }
 
 section {
@@ -103,6 +104,28 @@ nav {
 .icon-toggle {
   color: black;
 }
-
+/*media query for header*/
 @media screen and (max-width: 800px) {
+  header h1 {
+    font-size: 45px;
+  }
+
+  header p {
+    font-size: 16px;
+  }
+
+  .hero-row {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 5px;
+    padding: 5px;
+    margin: 5px;
+  }
+
+  .firstcol-hero {
+    background-image: url("images/long-horizontal.png");
+    background-position: 0px 5px;
+    background-repeat: no-repeat;
+    background-size: 100px;
+  }
 }
