--- a/style.css
+++ b/style.css
@@ -14,8 +14,10 @@ body {
   background-repeat: no-repeat;
 }
 
-header {
+header,
+section {
   width: 100%;
+  height: 100dvh;
   margin: 0 auto;
   padding: 0;
 }
@@ -38,7 +40,7 @@ header h1 {
   text-align: center;
 }
 
-header h2 {
+h2 {
   margin-top: 30px;
   padding: 10px;
   text-align: center;
@@ -67,9 +69,12 @@ header p {
   background-size: 170px;
 }
 
-section {
-  width: 100%;
-  height: 100svh;
+section.aboutme-section {
+  background-image: url(images/Untitled_Artwork-3.png);
+  background-size: cover;
+  background-position: center;
+  border-radius: 15px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
 nav {
