--- a/style.css
+++ b/style.css
@@ -14,69 +14,6 @@ body {
   background-repeat: no-repeat;
 }
 
-header,
-section {
-  width: 100%;
-  height: 100dvh;
-  margin: 0 auto;
-  padding: 0;
-}
-
-header .hero {
-  margin: 67px auto;
-  padding: 15px 0px;
-  width: 100%;
-  height: 100dvh;
-  background-image: url(images/Untitled_Artwork-2.png);
-  background-size: cover;
-  border-radius: 15px;
-  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
-}
-
-header h1 {
-  margin-top: 5px;
-  padding: 25px;
-  font-size: 55px;
-  text-align: center;
-}
-
-h2 {
-  margin-top: 30px;
-  padding: 10px;
-  text-align: center;
-  color: rgba(33, 33, 33, 0.7);
-}
-
-header p {
-  font-size: 25px;
-  text-align: justify;
-  padding: 15px;
-  margin: 15px auto;
-}
-
-.hero-row {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-gap: 5px;
-  padding: 40px;
-  margin: 0px 40px;
-}
-
-.firstcol-hero {
-  background-image: url("images/long-horizontal.png");
-  background-position: 0px 5px;
-  background-repeat: no-repeat;
-  background-size: 170px;
-}
-
-section.aboutme-section {
-  background-image: url(images/Untitled_Artwork-3.png);
-  background-size: cover;
-  background-position: center;
-  border-radius: 15px;
-  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
-}
-
 nav {
   background-color: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(4px);
@@ -109,9 +46,103 @@ nav {
 .icon-toggle {
   color: black;
 }
-/*media query for header*/
+
+header,
+section {
+  width: 100%;
+  height: 100dvh;
+  margin: 0 auto;
+  padding: 0;
+}
+
+header .hero {
+  margin: 67px auto;
+  padding: 15px 0px;
+  width: 100%;
+  height: 100dvh;
+  background-image: url(images/Untitled_Artwork-2.png);
+  background-size: cover;
+  border-radius: 15px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+header h1 {
+  font-family: var(--main-font-family);
+  margin-top: 5px;
+  padding: 25px;
+  font-size: 55px;
+  text-align: center;
+}
+
+h2 {
+  margin-top: 30px;
+  padding: 10px;
+  text-align: center;
+  color: rgba(33, 33, 33, 0.7);
+}
+
+header p {
+  font-size: 20px;
+  text-align: justify;
+  padding: 15px;
+  margin: 15px auto;
+}
+
+header button {
+  background-color: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(4px);
+  border: solid 1px rgba(33, 33, 33, 0.1);
+  font-size: 20px;
+  margin: 0px auto;
+  display: block;
+  padding: 10px;
+  border-radius: 20px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  transition: all 100ms ease-in-out;
+}
+
+header button a {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+header button:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+  backdrop-filter: blur(4px);
+}
+
+.hero-row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 15px;
+  padding: 40px;
+  margin: 10px 40px;
+}
+
+.firstcol-hero {
+  background-image: url("images/long-horizontal.png");
+  background-position: 0px 5px;
+  background-repeat: no-repeat;
+  background-size: 170px;
+}
+
+section.aboutme-section {
+  background-image: url(images/Untitled_Artwork-3.png);
+  background-size: cover;
+  background-position: center;
+  border-radius: 15px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.aboutme-section .skills {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+/*media query*/
 @media screen and (max-width: 800px) {
   header h1 {
+    margin-top: 15px;
     font-size: 45px;
   }
 
@@ -120,17 +151,20 @@ nav {
   }
 
   .hero-row {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 5px;
-    padding: 5px;
-    margin: 5px;
+    display: block;
+
+    padding: 10px;
+    margin: 0px auto;
   }
 
   .firstcol-hero {
     background-image: url("images/long-horizontal.png");
-    background-position: 0px 5px;
+    background-position: 1px 6px;
     background-repeat: no-repeat;
     background-size: 100px;
   }
+
+  header button {
+  font-size: 15px;
+  
 }
