--- a/style.css
+++ b/style.css
@@ -161,11 +161,69 @@ section .column li {
   font-size: 14px;
 }
 
-.resume img {
-  max-width: 100%;
+.resume {
+  background-image: url(images/Untitled_Artwork-1\ 2.png);
+  background-size: cover;
+  background-position: center;
   border-radius: 15px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  margin-top: 20px;
+}
+
+.resume img {
+  max-height: 80dvh;
+  max-width: 90%;
+  border-radius: 15px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  margin: 0 auto;
+  display: block;
+}
+
+.resume a {
+  font-size: 15px;
+  color: black;
+  text-decoration: none;
+}
+
+footer {
+  background-image: url(images/Untitled_Artwork-2.png);
+  background-size: cover;
+  background-position: center;
+  border-radius: 15px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  margin-top: 20px;
   text-align: center;
+}
+
+footer {
+  padding-bottom: 20px;
+}
+
+footer .social-icons {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.linkedin,
+.github,
+.email {
+  transition: all 120ms ease-in-out;
+}
+.linkedin:hover,
+.github:hover,
+.email:hover {
+  color: rgba(0, 0, 0, 0.9);
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 30px;
+  border: solid 1px rgba(0, 0, 0, 0.9);
+  backdrop-filter: blur(40px);
+  padding: 10px;
+  margin: 0 auto;
+}
+
+footer a {
+  color: rgba(0, 0, 0, 0.6);
+  text-decoration: none;
 }
 
 /*media query*/
