--- a/style.css
+++ b/style.css
@@ -50,13 +50,13 @@ nav {
 header,
 section {
   width: 100%;
-  height: 100dvh;
+  height: 100svh;
   margin: 0 auto;
   padding: 0;
 }
 
 header .hero {
-  margin: 67px auto;
+  margin-top: 67px;
   padding: 15px 0px;
   width: 100%;
   height: 100dvh;
@@ -132,7 +132,8 @@ section.aboutme-section {
   background-position: center;
   border-radius: 15px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
-  margin-top: 20px;
+
+  max-height: 100vh;
 }
 
 .aboutme-section .skills {
