--- a/style.css
+++ b/style.css
@@ -231,16 +231,22 @@ footer a {
 @media screen and (max-width: 800px) {
   header h1 {
     margin-top: 15px;
-    font-size: 45px;
+    font-size: 40px;
   }
 
+  header h2 {
+    margin-top: 15px;
+    padding: 5px;
+    text-align: center;
+    color: rgba(33, 33, 33, 0.7);
+  }
   header p {
-    font-size: 16px;
+    font-size: 15px;
+    margin: 5px auto;
   }
 
   .hero-row {
     display: block;
-
     padding: 10px;
     margin: 0px auto;
   }
