--- a/style.css
+++ b/style.css
@@ -173,6 +173,10 @@ h5 {
   font-size: 14px;
 }
 
+.scroller {
+  margin-left: 15px;
+}
+
 .scroller-inner {
   padding-block: 1rem;
   display: flex;
@@ -208,6 +212,48 @@ section.work {
   border-radius: 15px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
   max-height: 100vh;
+}
+
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.project {
+  background: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(4px);
+  height: 22vh;
+  width: 30vh;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 15px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+  margin: 30px auto;
+}
+
+.fa-brands,
+.fa-solid {
+  margin: 5px;
+  font-size: 15px;
+  transition: all 120ms ease-in-out;
+  color: black;
+}
+
+.fa-brands:hover,
+.fa-solid:hover {
+  color: #f07b55;
+}
+
+.projects i {
+  color: #59545a;
+}
+
+.project p {
+  text-align: end;
+}
+
+.project h5,
+.project h6 {
+  text-align: center;
 }
 
 /* RESUME STYLING */
@@ -328,6 +374,45 @@ footer a {
   }
 
   section .column li {
+    font-size: 12px;
+  }
+
+  .three-columns {
+    padding-block: 0.5rem;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    text-align: center;
+    justify-content: center;
+  }
+
+  .three-columns .sub-3col {
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+    font-size: 12px;
+  }
+
+  .project {
+    height: 13vh;
+    width: 35vh;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 15px;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+    margin: 5px auto;
+    font-size: 12px;
+  }
+
+  .project p {
+    margin-bottom: 0;
+  }
+  .project h5 {
+    font-size: 16px;
+    margin-top: 0;
+  }
+
+  .project h6 {
     font-size: 12px;
   }
 }
