--- a/style.css
+++ b/style.css
@@ -223,15 +223,16 @@ section.work {
 }
 
 .projects {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  padding: 0;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .project {
   background: rgba(255, 255, 255, 0.4);
   backdrop-filter: blur(4px);
   height: 30vh;
-  width: 35vh;
+  width: 40vh;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 15px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
@@ -417,6 +418,12 @@ footer a {
   .work {
     margin: 0 auto;
     display: block;
+  }
+
+  .projects {
+    display: grid;
+    padding: 0;
+    grid-template-columns: 1fr;
   }
 
   .project {
