--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ header button {
   backdrop-filter: blur(4px);
   border: solid 1px rgba(33, 33, 33, 0.1);
   font-size: 20px;
-  margin: 0px auto;
+  margin: 20px auto;
   display: block;
   padding: 10px;
   border-radius: 20px;
@@ -136,7 +136,7 @@ section.aboutme-section {
   background-position: center;
   border-radius: 15px;
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
-  max-height: 100vh;
+  height: 100vh;
 }
 
 /* ABOUT ME STYLING */
@@ -152,7 +152,7 @@ section.aboutme-section {
 
 h5 {
   text-align: center;
-  margin-top: 10px;
+  margin-top: 15px;
   margin-bottom: 15px;
   justify-content: center;
 }
@@ -162,7 +162,7 @@ h5 {
 .scroller {
   max-width: 80%;
   display: block;
-  margin: 0 auto;
+  margin: 15px auto;
 }
 
 .scroller__inner {
@@ -222,10 +222,12 @@ h5 {
 }
 
 .tag-list li {
-  padding: 0.5rem;
-  background: white;
-  border-radius: 0.5rem;
-  box-shadow: 0 0.5rem 1rem -0.25rem black;
+  padding: 10px;
+  background: rgba(255, 255, 255, 0.4);
+  backdrop-filter: blur(4px);
+  border-radius: 15px;
+  box-shadow: 0 0.3rem 0.8rem -0.2rem black;
+  text-align: center;
 }
 
 /* WORK STYLING */
