--- a/style.css
+++ b/style.css
@@ -70,12 +70,14 @@ header .hero {
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
 
-header h1 {
+header h1,
+#app {
   font-family: var(--main-font-family);
   margin-top: 5px;
   padding: 25px;
   font-size: 55px;
   text-align: center;
+  line-height: 60px;
 }
 
 h2 {
@@ -272,12 +274,6 @@ section.work {
   color: black;
 }
 
-.fa-brands:hover,
-.fa-solid:hover {
-  color: #f07b55;
-  font-size: 1em;
-}
-
 .projects i {
   color: #59545a;
 }
@@ -351,23 +347,6 @@ footer .social-icons {
 
 .social-icons i {
   font-size: 20px;
-}
-
-.linkedin,
-.github,
-.email {
-  transition: all 120ms ease-in-out;
-}
-.linkedin:hover {
-  color: #f17c53;
-}
-
-.github:hover {
-  color: white;
-}
-
-.email:hover {
-  color: #fcb289;
 }
 
 footer a {
