--- a/style.css
+++ b/style.css
@@ -361,6 +361,12 @@ footer a {
     font-size: 40px;
   }
 
+  #app {
+  margin-top: 5px;
+  padding: 15px;
+  font-size: 30px;
+  line-height: 30px;
+
   header h2 {
     margin-top: 15px;
     padding: 5px;
